--- a/.github/workflows/trunk.yaml
+++ b/.github/workflows/trunk.yaml
@@ -143,17 +143,19 @@ jobs:
           repo=$(echo $owner_and_repo | cut -d/ -f2)
 
           ref=`curl -L -s -H "Accept: application/vnd.github+json"   -H "Authorization: Bearer ${{ secrets.PGH_TOKEN }}"  -H "X-GitHub-Api-Version: 2022-11-28"   https://api.github.com/repos/$owner/$repo/commits/$GITHUB_SHA/pulls | jq -re '.[].head.ref'` || true
+          ref=`echo "$ref" | tr '[:upper:]' '[:lower:]'`
+          echo "[INFO] ref=$ref"
           pr_url=`curl -L -s -H "Accept: application/vnd.github+json"   -H "Authorization: Bearer ${{ secrets.PGH_TOKEN }}"  -H "X-GitHub-Api-Version: 2022-11-28"   https://api.github.com/repos/$owner/$repo/commits/$GITHUB_SHA/pulls | jq -re '.[].url'` || true
 
           if [[ ! -z $pr_url ]] && [[ $pr_url != 'null' ]]; then
             last_commit_msg=`curl -L -s -H "Accept: application/vnd.github+json" -H "Authorization: Bearer ${{ secrets.PGH_TOKEN }}" -H "X-GitHub-Api-Version: 2022-11-28" $pr_url/commits | jq -re '.[-1].commit.message'`
             last_commit_msg=`echo "$last_commit_msg" | tr '[:upper:]' '[:lower:]'`
             echo "[INFO] last_commit_msg=$last_commit_msg"
-            if [[ $last_commit_msg == *[patch]* ]]; then
+            if [[ "${last_commit_msg}" == *[patch]* ]]; then
               version_type=patch
-            elif [[ $last_commit_msg == *[minor]* ]]; then
+            elif [[ "${last_commit_msg}" == *[minor]* ]]; then
               version_type=minor
-            elif [[ $last_commit_msg == *[major]* ]]; then
+            elif [[ "${last_commit_msg}" == *[major]* ]]; then
               version_type=major
             else
               version_type=minor
@@ -162,8 +164,6 @@ jobs:
             version_type=patch
           fi
 
-          ref=`echo "$ref" | tr '[:upper:]' '[:lower:]'`
-          echo "[INFO] ref=$ref"
           if [[ -z $ref ]] || [[ $ref == 'null' ]]; then
             echo "[WARN] The commit doesn't have PR"
             skip_staging=false
@@ -174,6 +174,7 @@ jobs:
           elif [[ $ref =~ ^release/ ]]; then
             echo "[INFO] The commit comes from release: ref=$ref"
             skip_staging=true
+            version_type=minor
           else
             echo "[INFO] The commit's PR is not hotfix/release: ref=$ref"
             skip_staging=false
