--- a/.github/workflows/trunk.yaml
+++ b/.github/workflows/trunk.yaml
@@ -170,11 +170,11 @@ jobs:
             last_commit_msg=`curl -L -s -H "Accept: application/vnd.github+json" -H "Authorization: Bearer ${{ secrets.PGH_TOKEN }}" -H "X-GitHub-Api-Version: 2022-11-28" $pr_url/commits | jq -re '.[-1].commit.message'`
             last_commit_msg=`echo "$last_commit_msg" | tr '[:upper:]' '[:lower:]' | tr -d '[:space:]'`
             echo "[INFO] last_commit_msg=$last_commit_msg"
-            if [[ "${last_commit_msg}" == [patch]* ]]; then
+            if [[ "${last_commit_msg}" == \[patch\]* ]]; then
               version_type=patch
-            elif [[ "${last_commit_msg}" == [minor]* ]]; then
+            elif [[ "${last_commit_msg}" == \[minor\]* ]]; then
               version_type=minor
-            elif [[ "${last_commit_msg}" == [major]* ]]; then
+            elif [[ "${last_commit_msg}" == \[major\]* ]]; then
               version_type=major
             fi
           else
