--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -5,6 +5,7 @@ on:
     branches:
       - main
       - staging
+      - develop
   pull_request:
     branches:
       - main
@@ -132,7 +133,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     needs: [lint, unit_test, test, e2e]
-    if: ${{ github.ref == 'refs/heads/staging' || github.ref == 'refs/heads/main' }}
+    if: ${{ github.ref == 'refs/heads/staging' || github.ref == 'refs/heads/main' || github.ref == 'refs/heads/develop' }}
     env:
       DOCKER_USER: debu99
       DOCKER_REPO: hello-world
@@ -145,11 +146,23 @@ jobs:
           export GIT_HASH=$(git rev-parse --short "$GITHUB_SHA")
           echo "IMAGE=$IMAGE" >> $GITHUB_ENV
           echo "GIT_HASH=$GIT_HASH" >> $GITHUB_ENV
-      - name: Build the image
-        id: build
-        run: |
-          docker build --file Dockerfile -t "${{env.IMAGE}}:${{env.GIT_HASH}}" -t "${{env.IMAGE}}:latest" .
-          docker images | grep ${{env.IMAGE}}
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v2
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+      - name: Login to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ env.DOCKER_USER }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+      - name: Build and push
+        uses: docker/build-push-action@v4
+        with:
+          context: .
+          push: false
+          tags: |
+            ${{env.IMAGE}}:${{env.GIT_HASH}}
+            ${{env.IMAGE}}:latest
       - name: Scan the image
         uses: aquasecurity/trivy-action@master
         with:
@@ -160,78 +173,54 @@ jobs:
           vuln-type: 'os,library'
           severity: 'CRITICAL'
       - name: Push the image
+        id: push
         run: |
           docker images | grep ${{env.IMAGE}}
           docker login -u ${{env.DOCKER_USER}} -p ${{ secrets.DOCKER_PASSWORD }}
           echo "[INFO]IMAGE=${{env.IMAGE}} GIT_HASH=${{env.GIT_HASH}} "
           docker push "${{env.IMAGE}}:${{env.GIT_HASH}}"
           docker push "${{env.IMAGE}}:latest"
+          docker manifest inspect --verbose ${{env.IMAGE}}:${{env.GIT_HASH}}
+          echo "new_tag=${{env.GIT_HASH}}" >> $GITHUB_OUTPUT
+          echo "new_image=${{env.IMAGE}}" >> $GITHUB_OUTPUT
+    outputs:
+      new_tag: ${{ steps.push.outputs.new_tag }}
+      new_image: ${{ steps.push.outputs.new_image }}
 
-  debug:
-    runs-on: ubuntu-latest
-    if: ${{ github.ref == 'refs/heads/staging' || github.ref == 'refs/heads/main' }}
+  develop_deploy:
+    if: ${{ github.ref == 'refs/heads/develop' }}
     needs:
     - build
-    steps:
-      - name: check staging hotfix
-        if: github.ref == 'refs/heads/staging' && (startsWith(github.head_ref, 'hotfix/') || contains(github.event.head_commit.message, '[hotfix]'))
-        run: |
-          echo "[INFO] Hotfix branch detected in staging"
-
-      - name: check staging release
-        if: github.ref == 'refs/heads/staging' && (startsWith(github.head_ref, 'release/') || contains(github.event.head_commit.message, '[release]'))
-        run: |
-          echo "[INFO] Release branch detected in staging"
+    uses: .github/workflows/template_cd@main
+    with:
+      NEW_VERSION: ${{ needs.build.outputs.new_tag }}
+      APP_DOMAIN_NAME: "https://app.vic510.click"
+      APP_PORT: "8000"
+      APP_NAMESPACE: "develop"
+      HEALTHCHECK_URL: '/health'
 
   staging_deploy:
-    runs-on: ubuntu-latest
-    if: ${{ github.ref == 'refs/heads/staging' && !(startsWith(github.head_ref, 'hotfix/') || contains(github.event.head_commit.message, '[hotfix]')) && !(startsWith(github.head_ref, 'release/') || contains(github.event.head_commit.message, '[release]')) }}
+    if: ${{ github.ref == 'refs/heads/staging' }}
     needs:
     - build
-    steps:
-      - name: Setup Helm
-        uses: Azure/setup-helm@v3
-        with:
-          version: 'v3.8.2'
-
-      - name: Deploy to staging
-        run: |
-          echo "[INFO] not Hotfix/Release branch"
-          helm version
-          #helm upgrade --install my-app-staging ./helm-chart -f ./helm-chart/values.staging.yaml
-
-      - name: Smoke test
-        env:
-          APP_DOMAIN: "https://app.vic510.click"
-          APP_PORT: "8000"
-          APP_NAMESPACE: "dev"
-          HEALTHCHECK_URL: '/health'
-        run: |
-          echo "staging smoke test"
+    uses: .github/workflows/template_cd@main
+    with:
+      NEW_VERSION: ${{ needs.build.outputs.new_tag }}
+      APP_DOMAIN_NAME: "https://app.vic510.click"
+      APP_PORT: "8000"
+      APP_NAMESPACE: "staging"
+      HEALTHCHECK_URL: '/health'
 
   prod_deploy:
-    runs-on: ubuntu-latest
     if: ${{ github.ref == 'refs/heads/main' }}
     needs:
     - build
-    environment: 'prod'
-    steps:
-      - name: Setup Helm
-        uses: Azure/setup-helm@v3
-        with:
-          version: 'v3.8.2'
+    environment: prod
+    uses: .github/workflows/template_cd@main
+    with:
+      NEW_VERSION: ${{ needs.build.outputs.new_tag }}
+      APP_DOMAIN_NAME: "https://app.vic510.click"
+      APP_PORT: "8000"
+      APP_NAMESPACE: "dev"
+      HEALTHCHECK_URL: '/health'
 
-      - name: Deploy to production
-        run: |
-          echo "[INFO] main branch detected"
-          helm version
-          #helm upgrade --install my-app-prod ./helm-chart -f ./helm-chart/values.prod.yaml
-
-      - name: Smoke test
-        env:
-          APP_DOMAIN: "https://app.vic510.click"
-          APP_PORT: "8000"
-          APP_NAMESPACE: "dev"
-          HEALTHCHECK_URL: '/health'
-        run: |
-          echo "prod smoke test"
