--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -150,8 +150,8 @@ jobs:
         uses: docker/setup-qemu-action@v2
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
-        with:
-          driver: docker # defaults to "docker-containerized"
+        #with:
+        #  driver: docker # defaults to "docker-containerized"
       - name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
@@ -160,6 +160,7 @@ jobs:
       - name: Build and push
         uses: docker/build-push-action@v4
         with:
+          load: true
           push: false
           context: .
           file: ./Dockerfile
@@ -226,6 +227,6 @@ jobs:
       NEW_VERSION: ${{ needs.build.outputs.new_tag }}
       APP_DOMAIN_NAME: "https://app.vic510.click"
       APP_PORT: "8000"
-      APP_NAMESPACE: "dev"
+      APP_NAMESPACE: "prod"
       HEALTHCHECK_URL: '/health'
 
