--- a/.github/workflows/template_cd.yaml
+++ b/.github/workflows/template_cd.yaml
@@ -36,13 +36,21 @@ jobs:
     runs-on: ubuntu-latest
     environment: ${{ inputs.environment || 'non-prod' }}
     steps:
-      - name: Print debug info
+      - name: Checkout code
+        uses: actions/checkout@v3
+      - uses: azure/k8s-set-context@v3
+        with:
+          method: kubeconfig
+          kubeconfig: ${{ secrets.KUBE_CONFIG }}
+      - uses: azure/setup-kubectl@v3
+        with:
+          version: 'v1.25.4'
+      - name: Debug
         run: |
           echo "environment=${{ inputs.environment }}"
           echo "NEW_VERSION=${{ inputs.NEW_VERSION }}"
           echo "APP_NAMESPACE=${{ inputs.APP_NAMESPACE }} APP_DOMAIN_NAME=${{ inputs.APP_DOMAIN_NAME }} APP_PORT=${{ inputs.APP_PORT }} HEALTHCHECK_URL=${{ inputs.HEALTHCHECK_URL }}"
-      - name: Checkout code
-        uses: actions/checkout@v3
+          kubectl version
       - name: Setup Helm
         uses: Azure/setup-helm@v3
         with:
