--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -35,6 +35,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
       - name: Restore dependencies cache
+        id: cache-node-modules
         uses: actions/cache@v3
         with:
           path: node_modules
@@ -53,6 +54,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
       - name: Restore dependencies cache
+        id: cache-node-modules
         uses: actions/cache@v3
         with:
           path: node_modules
@@ -71,6 +73,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
       - name: Restore dependencies cache
+        id: cache-node-modules
         uses: actions/cache@v3
         with:
           path: node_modules
@@ -103,7 +106,6 @@ jobs:
 
   e2e:
     runs-on: ubuntu-latest
-    needs: [install]
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -130,6 +132,7 @@ jobs:
               exit 1
             fi
           done
+
   build:
     runs-on: ubuntu-latest
     needs: [lint, unit_test, test, e2e]
