--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -202,6 +202,7 @@ jobs:
     - build
     uses: ./.github/workflows/template_cd.yaml
     with:
+      ENVIRONMENT: dev
       NEW_VERSION: ${{ needs.build.outputs.new_tag }}
       APP_DOMAIN_NAME: "https://app.vic510.click"
       APP_PORT: "8000"
@@ -216,6 +217,7 @@ jobs:
     - build
     uses: ./.github/workflows/template_cd.yaml
     with:
+      ENVIRONMENT: staging
       NEW_VERSION: ${{ needs.build.outputs.new_tag }}
       APP_DOMAIN_NAME: "https://app.vic510.click"
       APP_PORT: "8000"
